--- a/app/templates/layout.html.twig
+++ b/app/templates/layout.html.twig
@@ -35,7 +35,7 @@
         var lang_get = "{{ locale }}";
         let dependances = [
             {
-                src: "{{ asset('js/edc.min.js') }}",
+                src: "{{ asset('js/scripts.min.js') }}",
                 require: [
                     {
                         name: "jQuery",
