--- a/app/templates/api/contact_form.html.twig
+++ b/app/templates/api/contact_form.html.twig
@@ -1,12 +1,11 @@
-{{ form_start(form,{'attr': {'data-step':'1'}}) }}
-    {% for child in form %}
-        {% if child.vars.block_prefixes[1] == 'submit' %}
-            <div class="form-group {{ child.vars.name }}" data-step="1">
-                <div class="g-recaptcha" data-sitekey="6Le41GwUAAAAANSBGml8877-JtZB5TGaymzuG6sT" ></div>
-            </div>
-        {% endif %}
-        <div class="form-group" data-step="{{ (child.vars.attr['data-step'] is defined) ? child.vars.attr['data-step'] : '1' }}" data-class="{{ (child.vars.attr['class'] is defined ) ? child.vars.attr['class'] : '' }}">
-            {{ form_row(child) }}
+{{ form_start(form) }}
+    {% for child in form %}  
+        <div class="form-group" data-class="{{ (child.vars.attr['class'] is defined ) ? child.vars.attr['class'] : '' }}">
+            {{ form_row(child,{'attr': {'placeholder': child.vars.label ?? '' }} ) }}
         </div>
     {% endfor %}
+    <div class="form-group" >
+        <div class="g-recaptcha" data-sitekey="6LfJJb0ZAAAAAJFHo-80onv8mP59zubol4M-BEUP" ></div>
+    </div>
+    <input type="submit" value="{{ 'submit' | trans }}" class="blue-btn"/>
 {{ form_end(form) }}
